# server/src/V2/Components/Set.ts
@@ -1,4 +1,4 @@
-import type { Set as SDKSet, SetResume, SupportedLanguages } from '@tcgdex/sdk'
+import type { SupportedLanguages } from '@tcgdex/sdk'
 import { executeQuery, type Query } from '../../libs/QueryEngine/filter'
 import { objectKeys, objectOmit } from '@dzeio/object-util'
 
@@ -6,7 +6,7 @@ import dataTMP from '../../../generated/sets.json'
 import { CompiledSet } from '../../../../scripts/compiler/interfaces'
 import { Version } from '../../interfaces'
 import { loadCard } from './Card'
-import { Set } from '../../api'
+import { Set as SDKSet, SetResume, CardResume } from '../../api'
 import { loadSerie } from './Serie'
 
 const data = dataTMP as Array<CompiledSet>
@@ -24,34 +24,7 @@ data.forEach((it) => {
 })
 
 export async function getAllSets(lang: SupportedLanguages, version: Version = 'full'): Promise<Array<SDKSet>> {
-	return Promise.all((langLists[lang] as Array<CompiledSet>).map((it) => transformSet(it, lang, version as 'full')))
-}
-
-
-async function transformSet(set: CompiledSet, lang: SupportedLanguages, version?: 'full'): Promise<SDKSet>
-async function transformSet(set: CompiledSet, lang: SupportedLanguages, version: 'brief'): Promise<SetResume>
-async function transformSet(set: CompiledSet, lang: SupportedLanguages, version: Version = 'full'): Promise<SDKSet | SetResume> {
-	const brief = {
-		id: set.id,
-		name: set.name[lang]!,
-		logo: set.logo?.[lang],
-		symbol: set.symbol,
-		cardCount: {
-			total: set.cards.length,
-			official: set.cardCount.official
-		}
-	}
-	if (version === 'brief') {
-		return brief
-	}
-	return {
-		...objectOmit(set, 'thirdParty'),
-		...brief,
-		releaseDate: set.releaseDate[lang]!,
-		// @ts-expect-error tmp handle of error :D
-		cards: await Promise.all(set.cards.map((it) => loadCard(lang, it, 'brief'))),
-		serie: (await loadSerie(set.serie, lang, 'brief'))!
-	} satisfies Set
+	return Promise.all((langLists[lang] as Array<CompiledSet>).map((it) => loadSet(it.id, lang, version as 'full') as Promise<SDKSet>))
 }
 
 export async function findSets(lang: SupportedLanguages, query: Query<SDKSet>, version: Version = 'full') {
@@ -66,14 +39,37 @@ export async function findOneSet(lang: SupportedLanguages, query: Query<SDKSet>)
 	return res[0]
 }
 
-export async function loadSet(id: string, lang: SupportedLanguages, version: 'full'): Promise<SDKSet | null>
-export async function loadSet(id: string, lang: SupportedLanguages, version: 'brief'): Promise<SetResume | null>
-export async function loadSet(id: string, lang: SupportedLanguages, version: Version = 'full'): Promise<SDKSet | SetResume | null> {
-	const tmp = langLists[lang].find((it) => it.id.toLowerCase() === id.toLowerCase())
-	if (!tmp) {
-		return null
+export async function loadSet(id: string, lang: SupportedLanguages, version: 'full'): Promise<SDKSet | undefined>
+export async function loadSet(id: string, lang: SupportedLanguages, version: 'brief'): Promise<SetResume | undefined>
+export async function loadSet(id: string, lang: SupportedLanguages, version: Version = 'full'): Promise<SDKSet | SetResume | undefined> {
+	const set = langLists[lang].find((it) => it.id.toLowerCase() === id.toLowerCase())
+	if (!set) {
+		return undefined
 	}
-	return transformSet(tmp, lang, version as 'full')
+	const brief = {
+		id: set.id,
+		name: set.name[lang]!,
+		logo: set.logo?.[lang],
+		symbol: set.symbol,
+		cardCount: {
+			total: set.cards.length,
+			official: set.cardCount.official
+		}
+	} satisfies SetResume
+	if (version === 'brief') {
+		return brief
+	}
+	return {
+		...objectOmit(set, 'thirdParty'),
+		...brief,
+		releaseDate: set.releaseDate[lang]!,
+		cards: await Promise.all(set.cards.map((it) => loadCard(lang, it, 'brief') as Promise<CardResume>)),
+		serie: (await loadSerie(set.serie, lang, 'brief'))!,
+		boosters: set.boosters?.map((it) => ({
+			id: it.id,
+			name: it.name[lang]!
+		}))
+	} satisfies SDKSet
 }
 
 export function setToBrief(set: SDKSet): SetResume {
